[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core>=0.10"]

[dependency-groups]
dev = [
  "commitizen>=4.13.10",
  "cryptography>=44.0.0",
  "cz-path>=0.0.6",
  "mypy>=1.20.2",
  "ruff==0.15.11",
  "ty>=0.0.32",
  "yapf>=0.43.0",
]
tests = ["coveralls>=4.1.0", "pytest>=9.0.3", "pytest-cov>=7.1.0", "pytest-mock>=3.15.1"]

[project]
authors = [{ name = "Andrew Udvare", email = "audvare@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["click>=8.3.2"]
description = "Decrypt DBeaver's credentials-config.json file."
keywords = ["credentials", "dbeaver", "decrypt"]
license = "MIT"
license-files = ["LICENSE.txt"]
name = "dbeaver-creds"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.3"

[project.scripts]
dbeaver-creds = "dbeaver_creds.main:main"

[project.urls]
Documentation = "https://tatsh.github.io/dbeaver-creds/"
Homepage = "https://tatsh.github.io/dbeaver-creds/"
Issues = "https://github.com/Tatsh/dbeaver-creds/issues"
Repository = "https://github.com/Tatsh/dbeaver-creds"

[tool.commitizen]
name = "cz_path"
remove_path_prefixes = ["dbeaver_creds", "include", "src", "tests"]
tag_format = "v$version"
version_files = [
  "CITATION.cff",
  "CMakeLists.txt",
  "README.md",
  "dbeaver_creds/__init__.py",
  "man/dbeaver-creds.1",
  "man/dbeaver-creds.h.3",
  "package.json",
]
version_provider = "pep621"

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
omit = ["conftest.py", "tests/*/test_*.py", "tests/test_*.py"]
show_missing = true

[tool.coverage.run]
branch = true
omit = ["conftest.py", "tests/*/test_*.py", "tests/test_*.py"]

[tool.mypy]
cache_dir = "~/.cache/mypy"
explicit_package_bases = true
platform = "linux"
python_version = "3.10"
show_column_numbers = true
strict = true
strict_optional = true
warn_unreachable = true

[tool.pyright]
deprecateTypingAliases = true
enableExperimentalFeatures = true
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*", "build", "dist"]
include = ["./dbeaver_creds"]
pythonPlatform = "Linux"
pythonVersion = "3.10"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImportCycles = "error"
reportMissingModuleSource = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "none"
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
norecursedirs = ["build", "dist", "node_modules"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
force-exclude = true
line-length = 100
namespace-packages = ["tests"]
target-version = "py310"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true
quote-style = "single"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["ANN401", "COM812", "CPY001", "D203", "D204", "D212", "N818", "S404", "S603", "TD002"]
preview = true

[tool.ruff.lint.flake8-builtins]
allowed-modules = ["types", "typing"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
from-first = true
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["test_*"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 20
max-locals = 20
max-nested-blocks = 6
max-positional-args = 15
max-public-methods = 30
max-returns = 10
max-statements = 150

[tool.scikit-build]
cmake.version = ">=3.26"
minimum-version = "build-system.requires"
sdist.exclude = ["**"]
sdist.include = [
  "/CMakeLists.txt",
  "/LICENSE.txt",
  "/README.md",
  "/dbeaver_creds/**/*.c",
  "/dbeaver_creds/**/*.py",
  "/dbeaver_creds/**/*.pyi",
  "/dbeaver_creds/CMakeLists.txt",
  "/dbeaver_creds/py.typed",
  "/include/**/*.h",
  "/pyproject.toml",
  "/src/**/*.c",
  "/src/**/*.h",
  "/src/CMakeLists.txt",
]
wheel.exclude = ["**/*.c", "**/*.h", "**/CMakeLists.txt"]
wheel.packages = ["dbeaver_creds"]

[tool.scikit-build.cmake.define]
BUILD_CLI = "OFF"
BUILD_PYTHON_EXTENSION = "ON"

[tool.uv]
default-groups = "all"
exclude-newer = "1 week"

[tool.yapf]
align_closing_bracket_with_visual_indent = true
allow_multiline_dictionary_keys = false
allow_multiline_lambdas = false
allow_split_before_dict_value = true
blank_line_before_class_docstring = false
blank_line_before_module_docstring = false
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 2
coalesce_brackets = true
column_limit = 100
continuation_align_style = "SPACE"
continuation_indent_width = 4
dedent_closing_brackets = false
disable_ending_comma_heuristic = false
each_dict_entry_on_separate_line = true
indent_dictionary_value = true
indent_width = 4
join_multiple_lines = true
no_spaces_around_selected_binary_operators = false
space_between_ending_comma_and_closing_bracket = false
spaces_around_default_or_named_assign = false
spaces_around_power_operator = true
spaces_before_comment = 2
split_all_comma_separated_values = false
split_arguments_when_comma_terminated = false
split_before_bitwise_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = false
split_before_expression_after_opening_paren = false
split_before_first_argument = false
split_before_logical_operator = true
split_before_named_assigns = true
split_complex_comprehension = false
split_penalty_after_opening_bracket = 30
split_penalty_after_unary_operator = 10000
split_penalty_before_if_expr = 0
split_penalty_bitwise_operator = 300
split_penalty_comprehension = 80
split_penalty_excess_character = 7000
split_penalty_for_added_line_split = 30
split_penalty_import_names = 0
split_penalty_logical_operator = 300
use_tabs = false

[tool.yapfignore]
ignore_patterns = [".venv", ".wiswa-ci", "build", "dist", "node_modules"]
