[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core>=0.12.2"]

[dependency-groups]
dev = [
  "commitizen>=4.13.10",
  "cryptography>=46.0.7",
  "cz-path>=0.0.6",
  "mypy>=1.20.2",
  "ruff==0.15.11",
  "ty>=0.0.32",
  "yapf>=0.43.0",
]
docs = [
  "autodoc-pydantic>=2.2.0",
  "doc8>=2.0.0",
  "enum-tools[sphinx]>=0.13.0",
  "esbonio>=2.0.0",
  "restructuredtext-lint>=2.0.2",
  "sphinx-datatables>=1.0.0",
  "sphinx-immaterial>=0.13.9",
  "sphinx>=9.1.0; python_version >= \"3.13\"",
  "tomlkit>=0.14.0",
]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["click>=8.3.2"]
description = "Decrypt DBeaver's credentials-config.json file and display the output (a JSON string)."
keywords = ["authentication", "credentials", "dbeaver", "terminal"]
license = "MIT"
name = "dbeaver-creds"
readme = "README.md"
requires-python = ">=3.10,<4.0"
version = "0.0.3"

[[project.authors]]
email = "audvare@gmail.com"
name = "Andrew Udvare"

[project.scripts]
dbeaver-creds = "dbeaver_creds.main:main"

[project.urls]
Issues = "https://github.com/Tatsh/dbeaver-creds/issues"
documentation = "https://dbeaver-creds.readthedocs.org"
homepage = "https://tatsh.github.io/dbeaver-creds/"
repository = "https://github.com/Tatsh/dbeaver-creds"

[tool.commitizen]
name = "cz_path"
remove_path_prefixes = ["dbeaver_creds", "include", "src"]
tag_format = "v$version"
version_files = [
  ".wiswa.jsonnet",
  "CITATION.cff",
  "README.md",
  "dbeaver_creds/__init__.py",
  "docs/badges.rst",
  "docs/index.rst",
  "package.json",
  "CMakeLists.txt",
  "DBeaverCreds/DBeaverCreds.psd1",
  "man/dbeaver-creds.1",
  "man/dbeaver-creds.h.3",
  "snapcraft.yaml",
]
version_provider = "pep621"

[tool.doc8]
max-line-length = 100

[tool.mypy]
cache_dir = "~/.cache/mypy"
explicit_package_bases = true
platform = "linux"
python_version = "3.10"
show_column_numbers = true
strict = true
strict_optional = true
warn_unreachable = true

[tool.pyright]
deprecateTypingAliases = true
enableExperimentalFeatures = true
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*"]
include = ["./dbeaver_creds"]
pythonPlatform = "Linux"
pythonVersion = "3.10"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImportCycles = "error"
reportMissingModuleSource = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "none"
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."

[tool.ruff]
cache-dir = "~/.cache/ruff"
force-exclude = true
line-length = 100
namespace-packages = ["docs", "tests"]
target-version = "py310"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true
quote-style = "single"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["ANN401", "COM812", "CPY001", "D203", "D204", "D212", "N818", "S404", "S603", "TD002"]
preview = true

[tool.ruff.lint.flake8-builtins]
allowed-modules = ["types", "typing"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
from-first = true
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["test_*"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 20
max-locals = 20
max-positional-args = 15
max-public-methods = 30
max-returns = 10
max-statements = 100

[tool.scikit-build]
minimum-version = "build-system.requires"

[tool.scikit-build.cmake]
version = ">=3.26"

[tool.scikit-build.cmake.define]
BUILD_CLI = "OFF"
BUILD_PYTHON_EXTENSION = "ON"

[tool.scikit-build.sdist]
exclude = ["**"]
include = [
  "/CMakeLists.txt",
  "/LICENSE.txt",
  "/README.md",
  "/dbeaver_creds/**/*.c",
  "/dbeaver_creds/**/*.py",
  "/dbeaver_creds/**/*.pyi",
  "/dbeaver_creds/CMakeLists.txt",
  "/dbeaver_creds/py.typed",
  "/include/**/*.h",
  "/man/dbeaver-creds.1",
  "/pyproject.toml",
  "/src/**/*.c",
  "/src/**/*.h",
  "/src/CMakeLists.txt",
]

[tool.scikit-build.wheel]
exclude = ["**/*.c", "**/*.h", "**/CMakeLists.txt"]
packages = ["dbeaver_creds"]

[tool.uv]
default-groups = "all"
exclude-newer = "1 week"

[tool.yapf]
align_closing_bracket_with_visual_indent = true
allow_multiline_dictionary_keys = false
allow_multiline_lambdas = false
allow_split_before_dict_value = true
blank_line_before_class_docstring = false
blank_line_before_module_docstring = false
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 2
coalesce_brackets = true
column_limit = 100
continuation_align_style = "SPACE"
continuation_indent_width = 4
dedent_closing_brackets = false
disable_ending_comma_heuristic = false
each_dict_entry_on_separate_line = true
indent_dictionary_value = true
indent_width = 4
join_multiple_lines = true
no_spaces_around_selected_binary_operators = false
space_between_ending_comma_and_closing_bracket = false
spaces_around_default_or_named_assign = false
spaces_around_power_operator = true
spaces_before_comment = 2
split_all_comma_separated_values = false
split_arguments_when_comma_terminated = false
split_before_bitwise_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = false
split_before_expression_after_opening_paren = false
split_before_first_argument = false
split_before_logical_operator = true
split_before_named_assigns = true
split_complex_comprehension = false
split_penalty_after_opening_bracket = 30
split_penalty_after_unary_operator = 10000
split_penalty_before_if_expr = 0
split_penalty_bitwise_operator = 300
split_penalty_comprehension = 80
split_penalty_excess_character = 7000
split_penalty_for_added_line_split = 30
split_penalty_import_names = 0
split_penalty_logical_operator = 300
use_tabs = false

[tool.yapfignore]
ignore_patterns = [".venv", ".wiswa-ci", "node_modules"]
